testcases/syntax_errors/6_overflow/1/test.asm
addi $t0, $zero, 2147483647
addi $t1, $zero, 2
add $t2, $t1, $t0